package edu.fiuba.algo3.modelo.Mapa.PaqueteAreas;

import edu.fiuba.algo3.modelo.Unidades.Unidad;

public class AreaEspacial implements Area{

    @Override
    public void esPosibleAgregar(Unidad unidad) {
        //unidad.esPosibleMoverseEn(this);
    }

}
