package edu.fiuba.algo3.modelo.Mapa.PaqueteTerreno;

import edu.fiuba.algo3.modelo.Construccion.Construccion;

public interface Terreno {

    void esPosibleConstruir(Construccion unaConstruccion);

}
