@startuml
'https://plantuml.com/class-diagram

class Partida {
    - jugadorUno
    - jugadorDos

    + jugar()
}

class Jugador {
    - nombre
    - color
    - accion

    + elegirAccion(mapa)
    + ejecutarAccion()
    + jugar(mapa)
}

abstract class Raza {
    - bancoDeRecursos
    - capacidadSuministro

    + comprar(construccion)
    + comprar(unidad)
    + tieneConstrucciones()
}

class Zerg {
    - acciones
    + agregar(construccion)
    + agregar(unidad)
    + tieneConstrucciones()
}

class Protoss {
    - acciones
    + agregar(construccion)
    + agregar(unidad)
    + tieneConstrucciones()
}

abstract class Construccion {
    - vida
    - tiempoConstruccion
    - costos
    + construir()
    + esPosibleConstruirEn()
}

abstract class ConstruccionZerg {
    + construir()
    + esPosibleConstruirEn()
}

abstract class ConstruccionProtoss {
    - escudo
    + construir()
    + esPosibleConstruirEn()
}

class Mapa {
    - mapa[][] : Casillas

    + buscar(Coordenada) : Casilla
}

class Casilla {

    - construccion
    - unidad

    + agregarUnidad()
    + agregarConstruccion()
    + setTerrreno()
    + setRecurso()
}

class Coordenada {
    - fila
    - columna

    +esIgual(Coordenada)
    +tieneMismaFilaColumna()
}

class SinRecurso {
    + esPosibleConstruir(construccion)
}

interface Terreno {
    + esPosibleConstruir(construccion)
}

class ConMoho {
    + esPosibleConstruir(construccion)
}

class ConEnergia {
    + esPosibleConstruir(construccion)
}

class SinTerreno {
    + esPosibleConstruir(construccion)
}

class Volcan {
    - cantidad
    + recolectar() : int
    + esPosibleConstruir(construccion)
}

class NodoMineral {
    - cantidad
    + recolectar() : int
    + esPosibleConstruir(construccion)
}

class Turno {

    +jugar()
    +cambiarTurno()
    +sigueJugando()
}

interface Recurso {
    + esPosibleConstruir(construccion)
}

Partida "2" o-- Jugador
Partida o-- Turno
Turno "1" -> Jugador

Jugador *- Raza
Raza <|-- Zerg
Raza <|-- Protoss
Zerg --> ConstruccionZerg
Protoss --> ConstruccionProtoss
ConstruccionZerg ..|> Construccion
ConstruccionProtoss ..|> Construccion

Mapa <- Turno
Casilla -* "*" Mapa
Coordenada --o Casilla

Casilla *-left- Terreno
Terreno <|.. ConEnergia
Terreno <|.. ConMoho
Terreno <|.. SinTerreno

Casilla *-- Recurso
Recurso <|.. Volcan
Recurso <|.. NodoMineral
Recurso <|.. SinRecurso

interface Area{
 +esPosibleAgregar(unidad)
}
class AreaTerrestre{
+esPosibleAgregar(unidad)
}
class AreaEspacial{
+esPosibleAgregar(unidad)
}

Casilla *-- Area
Area <|.. AreaEspacial
Area <|.. AreaTerrestre





@enduml